--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -33,6 +33,7 @@
                     >
 
                     <ImageView
+                        android:id="@+id/exploreProfile"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:layout_alignParentTop="true"
