--- a/app/src/main/res/layout/activity_client_info.xml
+++ b/app/src/main/res/layout/activity_client_info.xml
@@ -113,6 +113,7 @@
     </RelativeLayout>
 
         <ImageView
+            android:id="@+id/whatsapp_client"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginTop="424dp"
