--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -196,7 +196,7 @@
                 <RelativeLayout
                     android:background="@color/white"
                     android:layout_width="match_parent"
-                    android:layout_height="700dp"
+                    android:layout_height="wrap_content"
                     android:layout_below="@id/relativeLayout"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentEnd="true"
@@ -246,15 +246,14 @@
                         android:layout_alignParentEnd="true"
                         />
 
-                    <androidx.viewpager.widget.ViewPager
-                        android:id="@+id/viewPager1"
-                        android:layout_width="match_parent"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentEnd="true"
-                        android:layout_height="match_parent"
-                        android:layout_below="@+id/tabLayout"
-                        android:background="@color/white"
-                        />
+                  <FrameLayout
+                      android:layout_width="match_parent"
+                      android:layout_height="600dp"
+                      android:id="@+id/container"
+                      android:layout_below="@+id/tabLayout"
+                      android:layout_alignParentStart="true"
+                      android:layout_alignParentEnd="true"
+                      />
 
 
                 </RelativeLayout>
