--- a/app/src/main/res/layout/fragment_todo.xml
+++ b/app/src/main/res/layout/fragment_todo.xml
@@ -231,10 +231,10 @@
         app:tabTextColor="@color/add_details"
         app:tabTextAppearance="@style/TabLayout"
         android:layout_below="@id/my_task"/>
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/view_pager_task"
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="700dp"
         android:background="@color/white"
         android:layout_below="@id/tabs"/>
 
