--- a/app/src/main/res/layout/activity_on_boarding_screen.xml
+++ b/app/src/main/res/layout/activity_on_boarding_screen.xml
@@ -45,8 +45,38 @@
         android:textSize="18dp"
         android:text="NEXT"
         android:textColor="@color/black"
-
         />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/start_btn"
+        android:layout_width="215dp"
+        android:layout_height="44dp"
+        app:cardBackgroundColor="#FF2D55"
+        app:cardCornerRadius="8dp"
+        android:layout_margin="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="5dp"
+                android:gravity="center_horizontal"
+                android:text="Let\'s Start"
+                android:textSize="15sp"
+                android:fontFamily="@font/avenir"
+                android:textColor="@color/white" />
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
