--- a/app/src/main/res/layout/activity_add_property.xml
+++ b/app/src/main/res/layout/activity_add_property.xml
@@ -84,6 +84,7 @@
 
 
         <ImageView
+            android:id="@+id/editprofile"
             android:layout_width="20dp"
             android:layout_height="20dp"
             style="@style/SpecificCornerRounded"
@@ -94,6 +95,7 @@
             app:layout_constraintBottom_toBottomOf="@id/property_profile"/>
 
         <ImageView
+            android:id="@+id/editcover"
             android:layout_width="20dp"
             android:layout_height="20dp"
             style="@style/SpecificCornerRounded"
@@ -105,8 +107,8 @@
             app:layout_constraintBottom_toBottomOf="@id/property_cover"/>
 
 
-        <TextView
-            android:id="@+id/client_name_text"
+        <EditText
+            android:id="@+id/hotel_name_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hotel Name"
@@ -123,9 +125,9 @@
             android:src="@drawable/png_edit"
             app:layout_constraintVertical_bias="0.6"
             android:layout_marginStart="10dp"
-            app:layout_constraintTop_toTopOf="@id/client_name_text"
-            app:layout_constraintStart_toEndOf="@id/client_name_text"
-            app:layout_constraintBottom_toBottomOf="@id/client_name_text"/>
+            app:layout_constraintTop_toTopOf="@id/hotel_name_text"
+            app:layout_constraintStart_toEndOf="@id/hotel_name_text"
+            app:layout_constraintBottom_toBottomOf="@id/hotel_name_text"/>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/property_d_card"
@@ -134,7 +136,7 @@
             app:cardCornerRadius="25dp"
             android:layout_margin="20dp"
             app:cardElevation="7dp"
-            app:layout_constraintTop_toBottomOf="@id/client_name_text"
+            app:layout_constraintTop_toBottomOf="@id/hotel_name_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
