--- a/app/src/main/res/layout/fragment_on_boarding3.xml
+++ b/app/src/main/res/layout/fragment_on_boarding3.xml
@@ -1,13 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".OnBoardingScreen.OnBoardingFragment3"
-    android:background="@drawable/__onboarding_3"
-    >
+    android:background="@drawable/__onboarding_3">
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/start_btn"
+        android:layout_width="165dp"
+        android:layout_height="44dp"
+        app:cardBackgroundColor="#FF2D55"
+        app:cardCornerRadius="8dp"
+        android:layout_margin="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="5dp"
+                android:gravity="center_horizontal"
+                android:text="Let\'s Start"
+                android:textSize="15sp"
+                android:fontFamily="@font/avenir"
+                android:textColor="@color/white" />
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 
 
 
-</RelativeLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
