--- a/app/src/main/res/layout/recentcard.xml
+++ b/app/src/main/res/layout/recentcard.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="20dp"
     android:layout_margin="5dp"
+    android:background="#FFFFFF"
     android:layout_alignParentStart="true"
     >
 
