--- a/app/src/main/res/layout/activity_add_property.xml
+++ b/app/src/main/res/layout/activity_add_property.xml
@@ -354,6 +354,366 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/add_prop_text"/>
 
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_add_links"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginVertical="15dp"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="8dp"
+            android:layout_marginBottom="15dp"
+            app:layout_constraintTop_toBottomOf="@id/social_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding ="20dp">
+
+                <ImageView
+                    android:id="@+id/fb"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/facebook"
+                    android:layout_marginVertical="3dp"
+                    app:layout_constraintHorizontal_bias="0.035"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
+                <RelativeLayout
+                    android:layout_width="260dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/round_low"
+                    android:paddingVertical="5dp"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_vertical"
+                    app:layout_constraintHorizontal_bias="0.2"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/fb"
+                    app:layout_constraintTop_toTopOf="@id/fb"
+                    app:layout_constraintBottom_toBottomOf="@id/fb">
+
+                    <EditText
+                        android:id="@+id/fb_id"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/enter_number_of_post_and_videos"
+                        android:textSize="13sp"
+                        android:textColor="@color/add_details"
+                        android:background="@null"
+                        style="@style/TextAppearance.AppCompat.Body1"
+                        android:fontFamily="@font/avenir"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="5dp"
+                        android:layout_alignParentStart="true"/>
+
+                     <ImageView
+                         android:layout_width="20dp"
+                         android:layout_height="20dp"
+                         style="@style/SpecificCornerRounded"
+                         android:src="@drawable/png_edit"
+                         android:layout_alignParentEnd="true"
+                         android:layout_centerVertical="true"
+                         android:layout_marginEnd="8dp"/>
+
+                </RelativeLayout>
+
+                <ImageView
+                    android:id="@+id/googl"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginTop="10dp"
+                    android:src="@drawable/google"
+                    app:layout_constraintStart_toStartOf="@id/fb"
+                    app:layout_constraintTop_toBottomOf="@id/fb"/>
+                <RelativeLayout
+                    android:layout_width="260dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/round_low"
+                    app:layout_constraintHorizontal_bias="0.2"
+                    android:paddingVertical="5dp"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_vertical"
+                    app:layout_constraintStart_toEndOf="@id/googl"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/googl"
+                    app:layout_constraintBottom_toBottomOf="@id/googl">
+
+                    <EditText
+                        android:id="@+id/google_id"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/enter_number_of_reviews"
+                        android:textSize="13sp"
+                        android:textColor="@color/add_details"
+                        android:background="@null"
+                        style="@style/TextAppearance.AppCompat.Body1"
+                        android:fontFamily="@font/avenir"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="5dp"
+                        android:layout_alignParentStart="true"/>
+
+                     <ImageView
+                         android:layout_width="20dp"
+                         android:layout_height="20dp"
+                         style="@style/SpecificCornerRounded"
+                         android:src="@drawable/png_edit"
+                         android:layout_alignParentEnd="true"
+                         android:layout_centerVertical="true"
+                         android:layout_marginEnd="8dp"/>
+
+                </RelativeLayout>
+
+
+                <ImageView
+                    android:id="@+id/insta"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginTop="10dp"
+                    android:src="@drawable/instagram"
+                    app:layout_constraintStart_toStartOf="@id/fb"
+                    app:layout_constraintTop_toBottomOf="@id/googl"/>
+                <RelativeLayout
+                    android:layout_width="260dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/round_low"
+                    app:layout_constraintHorizontal_bias="0.2"
+                    android:paddingVertical="5dp"
+                    android:layout_marginVertical="3dp"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_vertical"
+                    app:layout_constraintStart_toEndOf="@id/insta"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/insta"
+                    app:layout_constraintBottom_toBottomOf="@id/insta">
+
+                    <EditText
+                        android:id="@+id/insta_id"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="Enter number of post and reels"
+                        android:textSize="13sp"
+                        android:textColor="@color/add_details"
+                        android:background="@null"
+                        style="@style/TextAppearance.AppCompat.Body1"
+                        android:fontFamily="@font/avenir"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="5dp"
+                        android:layout_alignParentStart="true"/>
+
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        style="@style/SpecificCornerRounded"
+                        android:src="@drawable/png_edit"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="8dp"/>
+
+                </RelativeLayout>
+
+
+                <ImageView
+                    android:id="@+id/linkedin"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginTop="10dp"
+                    android:src="@drawable/linkedin"
+                    app:layout_constraintStart_toStartOf="@id/fb"
+                    app:layout_constraintTop_toBottomOf="@id/insta"/>
+                <RelativeLayout
+                    android:layout_width="260dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/round_low"
+                    app:layout_constraintHorizontal_bias="0.2"
+                    android:layout_marginVertical="3dp"
+                    android:paddingVertical="5dp"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_vertical"
+                    app:layout_constraintStart_toEndOf="@id/linkedin"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/linkedin"
+                    app:layout_constraintBottom_toBottomOf="@id/linkedin">
+
+                    <EditText
+                        android:id="@+id/linkedin_id"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/enter_number_of_post_and_videos"
+                        android:textSize="13sp"
+                        android:textColor="@color/add_details"
+                        android:background="@null"
+                        style="@style/TextAppearance.AppCompat.Body1"
+                        android:fontFamily="@font/avenir"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="5dp"
+                        android:layout_alignParentStart="true"/>
+
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        style="@style/SpecificCornerRounded"
+                        android:src="@drawable/png_edit"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="8dp"/>
+
+                </RelativeLayout>
+
+
+                <ImageView
+                    android:id="@+id/pinterest"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginTop="10dp"
+                    android:src="@drawable/pinterest"
+                    app:layout_constraintStart_toStartOf="@id/fb"
+                    app:layout_constraintTop_toBottomOf="@id/linkedin"/>
+                <RelativeLayout
+                    android:layout_width="260dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/round_low"
+                    app:layout_constraintHorizontal_bias="0.2"
+                    android:layout_marginVertical="3dp"
+                    android:paddingVertical="5dp"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_vertical"
+                    app:layout_constraintStart_toEndOf="@id/pinterest"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/pinterest"
+                    app:layout_constraintBottom_toBottomOf="@id/pinterest">
+
+                    <EditText
+                        android:id="@+id/pinterest_id"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/enter_number_of_post_and_videos"
+                        android:textSize="13sp"
+                        android:textColor="@color/add_details"
+                        android:background="@null"
+                        style="@style/TextAppearance.AppCompat.Body1"
+                        android:fontFamily="@font/avenir"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="5dp"
+                        android:layout_alignParentStart="true"/>
+
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        style="@style/SpecificCornerRounded"
+                        android:src="@drawable/png_edit"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="8dp"/>
+
+                </RelativeLayout>
+
+
+                <ImageView
+                    android:id="@+id/tripad"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginTop="10dp"
+                    android:src="@drawable/tripadvisor"
+                    app:layout_constraintStart_toStartOf="@id/fb"
+                    app:layout_constraintTop_toBottomOf="@id/pinterest"/>
+                <RelativeLayout
+                    android:layout_width="260dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/round_low"
+                    app:layout_constraintHorizontal_bias="0.2"
+                    android:layout_marginVertical="3dp"
+                    android:paddingVertical="5dp"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_vertical"
+                    app:layout_constraintStart_toEndOf="@id/tripad"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/tripad"
+                    app:layout_constraintBottom_toBottomOf="@id/tripad">
+
+                    <EditText
+                        android:id="@+id/tripad_id"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/enter_number_of_reviews"
+                        android:textSize="13sp"
+                        android:textColor="@color/add_details"
+                        android:background="@null"
+                        style="@style/TextAppearance.AppCompat.Body1"
+                        android:fontFamily="@font/avenir"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="5dp"
+                        android:layout_alignParentStart="true"/>
+
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        style="@style/SpecificCornerRounded"
+                        android:src="@drawable/png_edit"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="8dp"/>
+
+                </RelativeLayout>
+
+
+                <ImageView
+                    android:id="@+id/twit"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginTop="10dp"
+                    android:src="@drawable/twitter"
+                    app:layout_constraintStart_toStartOf="@id/fb"
+                    app:layout_constraintTop_toBottomOf="@id/tripad"/>
+                <RelativeLayout
+                    android:layout_width="260dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/round_low"
+                    app:layout_constraintHorizontal_bias="0.2"
+                    android:layout_marginVertical="3dp"
+                    android:paddingVertical="5dp"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_vertical"
+                    app:layout_constraintStart_toEndOf="@id/twit"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/twit"
+                    app:layout_constraintBottom_toBottomOf="@id/twit">
+
+                    <EditText
+                        android:id="@+id/twitter_id"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/enter_number_of_post_and_videos"
+                        android:textSize="13sp"
+                        android:textColor="@color/add_details"
+                        android:background="@null"
+                        style="@style/TextAppearance.AppCompat.Body1"
+                        android:fontFamily="@font/avenir"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="5dp"
+                        android:layout_alignParentStart="true"/>
+
+                     <ImageView
+                         android:layout_width="20dp"
+                         android:layout_height="20dp"
+                         style="@style/SpecificCornerRounded"
+                         android:src="@drawable/png_edit"
+                         android:layout_alignParentEnd="true"
+                         android:layout_centerVertical="true"
+                         android:layout_marginEnd="8dp"/>
+
+                </RelativeLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
+
+
         <TextView
             android:id="@+id/about_text"
             android:layout_width="wrap_content"
