--- a/app/src/main/res/layout/activity_igniter_dash_board.xml
+++ b/app/src/main/res/layout/activity_igniter_dash_board.xml
@@ -278,6 +278,17 @@
         android:textSize="16dp"
         tools:ignore="MissingConstraints" />
 
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/Egniter_shimmer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/titletext"
+            tools:ignore="MissingConstraints">
+            <include layout="@layout/egintershimmer"/>
+        </com.facebook.shimmer.ShimmerFrameLayout>
+
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Egniter_recycler"
        android:layout_width="match_parent"
@@ -292,14 +303,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="600dp"
         android:fontFamily="@font/rubik_medium"
         android:text="My Task"
         android:textColor="#383842"
         android:textSize="25dp"
         app:layout_constraintStart_toStartOf="parent"
         android:textFontWeight="500"
-        app:layout_constraintTop_toBottomOf="@+id/Egniter_recycler"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
 
