--- a/app/src/main/res/layout/activity_igniter_dash_board.xml
+++ b/app/src/main/res/layout/activity_igniter_dash_board.xml
@@ -267,6 +267,7 @@
 
 
     <TextView
+        android:id="@+id/latest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="@id/progressBar"
